<?xml version="1.0"?>
<package>
  <name>RoboFactorySimGUI</name>
  <version>0.1.0</version>
  <description>

     RoboFactorySimGUI

  </description>
  <maintainer email="SEP2018_1@gmail.com">SEP2018_1</maintainer>
  <author>SEP2018_1</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>stdmsgs</build_depend>
  <run_depend>stdmsgs</run_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

 
</package>
